damanzano: The line 128 was commented in order to correct the overlap of some elements.

--- a/web/resources/css/styles.css
+++ b/web/resources/css/styles.css
@@ -3,7 +3,8 @@
     Created on : 26-oct-2012, 15:10:17
     Author     : David Andrés Manzano Herrera
     Description:
-        Purpose of the stylesheet follows.
+        Main style sheet.
+    [2012-01-29] damanzano: The line 128 was commented in order to correct the overlap of some elements.
 */
 
 root { 
@@ -124,7 +125,7 @@ footer a{
 }
 .email, .personal-web-page, .phone{
     display: block;
-    height: 20px;
+    /*height: 20px;*/
     padding-left: 20px
 }
 .email{
